# MMNN

./: .gitignore  README.md  launch.sh  pyproject.toml  tach.toml
examples/: Example1D.py  Example2D.py  ExampleHighD.py
model/: __init__.py
model/mmnn/: mmnn.py  mmnn_jax.py
tests/: test_env.py  test_jax.py  test_mmnn_jax.py  test_torch.py
