[project]
name = "mmnn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "matplotlib>=3.10.3",
    "numpy>=2.3.1",
    "pytest>=8.4.1",
    "ruff>=0.12.4",
    "scipy>=1.16.0",
    "setuptools>=80.9.0",
    "tach>=0.29.0",
    "torch>=2.7.1",
    "ty>=0.0.1a14",
]





[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]

package-dir = {"MMNN"=".", "mmnn"="model/mmnn"}
packages = ["MMNN", "mmnn"]



[tool.setuptools.package-data]
"*" = ["*.py", "*.pyi", "*.c", "*.h", "*.cpp", "*.hpp"]
