[project]
name = "mmnn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "flax>=0.10.7",
    "jax[cuda12,gpu]>=0.6.2",
    "matplotlib>=3.10.3",
    "neural-tangents>=0.5.0",
    "numpy>=2.3.1",
    "pytest>=8.4.1",
    "ruff>=0.12.4",
    "scipy>=1.16.0",
    "setuptools>=80.9.0",
    "tach>=0.29.0",
    "ty>=0.0.1a14",
]





[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]

package-dir = {"MMNN"=".", "mmnn"="model/mmnn"}
packages = ["MMNN", "mmnn"]



[tool.setuptools.package-data]
"*" = ["*.py", "*.pyi", "*.c", "*.h", "*.cpp", "*.hpp"]
