[project]
name = "mmnn"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "flax>=0.10.6",
    "jax[cuda12]>=0.5.3",
    "jupyter>=1.1.1",
    "jupytext>=1.17.2",
    "matplotlib>=3.10.3",
    "neural-tangents>=0.6.1",
    "numpy>=2.1.3",
    "optax>=0.2.5",
    "pandas>=2.3.1",
    "polars>=1.31.0",
    "pytest>=8.4.1",
    "ruff>=0.12.4",
    "scikit-learn>=1.7.1",
    "scipy>=1.16.0",
    "seaborn>=0.13.2",
    "setuptools>=80.9.0",
    "sympy>=1.14.0",
    "tach>=0.29.0",
    "tensorflow>=2.19.0",
    "torch>=2.7.1",
    "tqdm>=4.67.1",
    "ty>=0.0.1a14",
]





[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]

package-dir = {"MMNN"=".", "mmnn"="model/mmnn"}
packages = ["MMNN", "mmnn"]



[tool.setuptools.package-data]
"*" = ["*.py", "*.pyi", "*.c", "*.h", "*.cpp", "*.hpp"]
